# bevy_animation_graph

./: Makefile.toml
crates/bevy_animation_graph/src/core/: animation_node.rs  plugin.rs
crates/bevy_animation_graph/src/core/animation_graph/: loader.rs  serial.rs
crates/bevy_animation_graph/src/core/edge_data/: bone_mask.rs  core.rs
crates/bevy_animation_graph/src/nodes/: mask_node.rs  mod.rs
crates/bevy_animation_graph/src/nodes/arithmetic/: mod.rs
crates/bevy_animation_graph/src/nodes/arithmetic/bone_mask/: inverted_mask.rs  mod.rs
crates/bevy_animation_graph_editor/: Cargo.toml  Makefile.toml
