[package]
name = "bevy_animation_graph_editor"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
description = "Animation graph editor for the Bevy game engine"
keywords = ["bevy", "animation", "gamedev", "editor", "graph"]

[dependencies]
bevy = { workspace = true, features = ["file_watcher"] }
ron = { workspace = true }
derivative = "2.2.0"
bevy_animation_graph = { version = "0.4.0", path = "../bevy_animation_graph" }
clap = { version = "4.4.18", features = ["derive"] }
bevy-inspector-egui = "0.24"
egui_dock = "0.12"
egui-notify = "0.14"


######## WORKAROUND @2023/11/15 A: WSL->Windows Cross-Compilation Failed
## see: https://github.com/bevyengine/bevy/issues/10425
[dependencies.blake3]
version = "1.5"
features = ["pure"]
######## WORKAROUND @2023/11/15 A
